# webds_software_update

./: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml
src/: index.ts  local_exports.ts  widget.tsx  widget_container.tsx  widget_landing.tsx  widget_manual.tsx  widget_mui.tsx
src/widget/: Landing.tsx  SoftwareUpdateComponent.tsx  SoftwareUpdateWidget.tsx  constants.tsx  local_exports.tsx
style/: base.css
